# pydriva

./: .gitignore  README.md  pyproject.toml  setup.cfg
driva/: __init__.py  cnpj.py  site.py  tools.py
pydriva/: __init__.py  aws.py  azurestorage.py  crawler.py  fast_requests.py  site.py  spiderweb.py  tools.py
test/: fast_requests_test.py  pytest_azure_storage.py  test_azure_storage.py  test_cnpj.py  test_site.py  test_upload.py
