[metadata]
name = driva
version = 0.0.3
author = Gustavo Guedes
author_email = gustavo@driva.com.br
description = Data management package from Driva
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Driva-tecnologia/driva-package
project_urls =
    Bug Tracker = https://github.com/Driva-tecnologia/driva-package/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
