[metadata]
name = pydriva
version = 0.1.0
author = Gustavo Guedes
author_email = gustavo@driva.com.br
description = Data management package from Driva
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Driva-tecnologia/pydriva
project_urls =
    Bug Tracker = https://github.com/Driva-tecnologia/pydriva/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires=
    tqdm
    azcopy-wrapper
    azure-storage-file-datalake
    tld
    aiohttp
    numpy
    loguru

[options.packages.find]
where = .
